rev composer.json makefile rename brain-games

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,12 @@
 {
     "name": "hexlet/code",
+    "bin": ["bin/brain-games"],
+    "description": "hexlet php-package",
     "autoload": {
         "psr-4": {
             "Hexlet\\Code\\": "src/"
         }
     },
+    "license": "proprietary",
     "require": {}
 }
