--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,7 @@
         }
     },
     "license": "proprietary",
-    "require": {}
+    "require": {
+        "wp-cli/php-cli-tools": "^0.11.17"
+    }
 }
