--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     },
     "license": "proprietary",
     "require": {
-        "wp-cli/php-cli-tools": "^0.11.17"
+        "wp-cli/php-cli-tools": "^0.11.17",
+        "squizlabs/php_codesniffer": "^3.7"
     }
 }
