--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "name": "hexlet/code",
-    "bin": ["bin/brain-games"],
+    "bin": [
+	"bin/brain-games",
+	"bin/brain-even"
+    ],
     "description": "hexlet php-package",
     "autoload": {
         "psr-4": {
