--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "hexlet/code",
     "bin": [
 	"bin/brain-games",
-	"bin/brain-even"
+	"bin/brain-even",
+	"bin/brain-calc"
     ],
     "description": "hexlet php-package",
     "autoload": {
