add final game-gcd

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "bin": [
 	"bin/brain-games",
 	"bin/brain-even",
-	"bin/brain-calc"
+	"bin/brain-calc",
+	"bin/brain-gcd"
     ],
     "description": "hexlet php-package",
     "autoload": {
