--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"bin/brain-even",
 	"bin/brain-calc",
 	"bin/brain-gcd",
-	"bin/brain-progression"
+	"bin/brain-progression",
+        "bin/brain-prime"
     ],
     "description": "hexlet php-package",
     "autoload": {
